# vinseers

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
example/: text.txt
example/outter-text/: text2.txt
example/outter-text/inner-text/: text.json  text3.txt
mac/: Info.plist
src/: main.rs  search.rs
src/inputs/: config.rs  flags.rs  mod.rs  parse.rs
src/outputs/: mod.rs
vinseers/: Cargo.toml
vinseers-cli/: Cargo.toml
vinseers-cli/src/: config.rs  main.rs
vinseers-cli/src/inputs/: config.rs  parse.rs
vinseers-gui/: Cargo.toml
vinseers-gui/scripts/: install-unix-like.sh
vinseers-gui/src/: constants.rs  helpers.rs  main.rs  outputs.rs
vinseers/src/: helpers.rs  lib.rs  main.rs  outputs.rs  regexes.rs  search.rs  vid.rs
vinseers/src/outputs/: outputs.rs
vinseers/src/parsers/: mod.rs  pdf.rs  xlsx.rs
