[package]
name = "vinseers-gui"
version = "0.1.1"
edition = "2021"

[dependencies]
vinseers = { path = "../vinseers" }

iced = "0.12.1"
rfd = "0.14.1"


[package.metadata.bundle]
name = "vinseers"
identifier = "vinseers"
icon = ["images/vinseers-icon.png"]
version = "0.1.1"
category = "Developer Tool"
short_description = "Extract VIN from documents"
long_description = """
Extract vehicle identification id from documents such as html, pdf, txt.
"""
deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
osx_frameworks = ["SDL2"]
osx_url_schemes = ["com.doe.exampleapplication"]